--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
       <section>
         <div class="sectionContent">
-          <h1 id="Volunteer Work"><strong>Volunteer Work</strong></h1>
+          <h1 id="VolunteerWork"><strong>Volunteer Work</strong></h1>
           <table class= "table table-bordered">
             <thead class = "thead-default">
               <br>
@@ -233,7 +233,7 @@
       <div class="sectionContent">
         <h2 id="Social Media"><strong>Social Media</strong> </h2>
         <ul>
-          <a href="www.twitter.com/magadiff"> <img style="border:0;width:40px;height:40px" src="icono.png" alt="Twitter Icon"/>
+          <a href="www.twitter.com/magadiff"> <img style="border:0;width:40px;height:40px" src="icono.png" alt="Twitter Icon"/></a>
             <a href="www.linkedin.com/in/mariaballesrin"> <img style="border:0;width:40px;height:40px" src="icon.png" alt="Linkedin Icon"/>
             </a>
         </ul>
