--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/reset.css">
 
+
+
   <link href ="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable= no">
   <script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js"
@@ -32,9 +34,9 @@
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="#Education">Education</a></li>
-          <li><a href="#Work Experience">Work Experience</a></li>
+          <li><a href="#WorkExperience">Work Experience</a></li>
           <li><a href="#Skills">Skills</a></li>
-          <li><a href="#Volunteer Work">Volunteer Work</a></li>
+          <li><a href="#VolunteerWork">Volunteer Work</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
       </div>
@@ -47,7 +49,7 @@
       <div class ="Head">
 
         <img  src="fotomaria.jpg"
-        alt = "Maria Photo" height="160px">
+        alt = "Maria Photo" height="160">
         <h1><strong>María Ballesteros Rincón</strong></h1>
         <ul>
           <li>email: mariaballesrin@gmail.com <a href="mailto:mariaballesrin@gmail.com" target="_blank"></a></li>
@@ -69,207 +71,207 @@
 
     <section>
 
-        <div class="sectionContent">
-          <h1 id="Volunteer Work"><strong>Education</strong></h1>
-          <table class= "table table-bordered">
-            <thead class = "thead-default">
-              <br>
-              <tr>
-                <th>Qualification </th>
-                <th>Institution</th>
-                <th>Location</th>
-                <th>Date</th>
-
-              </tr>
-            </thead>
-            <tbody>
-
-              <tr>
-                <td>MSc Geographical Information Systems </td>
-                <td>Esri España</td>
-                <td>Madrid</td>
-                <td>2016-2017</td>
-              </tr>
-
-              <tr>
-                <td>MSc Environmental Conservation and Management </td>
-                <td>Swansea Metropolitan University</td>
-                <td>Swansea</td>
-                <td>2011-2012</td>
-
-              </tr>
-              <tr>
-                <td>MSc Hidrology and Water Resources Management</td>
-                <td>Universidad de Álcala de Henares</td>
-                <td>Madrid</td>
-                <td>2009-2010 </td>
-
-              </tr>
-              <tr>
-                <td>BSc(Hons) Marine Sciences</td>
-                <td> Universidad de Cádiz </td>
-                <td>Cádiz</td>
-                <td>2006-2009 </td>
-
-              </tr>
-            </tbody>
-          </table>
-          <br>
-        </div>
-      </section>
-
-      <section>
-
-        <div class="sectionContent">
-          <h1 id="Work Experience"> <strong>Work Experience</strong> </h1>
-          <table class="table table-bordered" >
-            <thead class="thead-default">
-              <br>
-              <tr>
-                <th>Company </th>
-                <th>Job position </th>
-                <th>Location </th>
-                <th>Date</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Cardiff University</td>
-                <td>Campus Services</td>
-                <td>Cardiff</td>
-                <td>2014-2016</td>
-              </tr>
-
-              <tr>
-                <td>Imares-WurWageningen </td>
-                <td>Trainee position </td>
-                <td>Yerseke,The Netherlands</td>
-                <td>2012</td>
-
-              </tr>
-              <tr>
-                <td> Geotema S.r.L </td>
-                <td>Erasmus workplacement</td>
-                <td>Ferrara,Italy </td>
-                <td>2009</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-
-      <section>
-        <div class="sectionContent">
-          <h1 id="Skills"><strong>Skills</strong></h1>
-          <br>
-
-          <ul class="keySkills">
-            <li>Team work</li>
-            <br>
-            <li>Initiative</li>
-            <br>
-            <li>Communication</li>
-            <br>
-            <li>Organisational Skills</li>
-            <br>
-            <li>Analytical</li>
-            <br>
-            <li>Computing:Windows,Microsoft Office, ArcGis,MapInfo,SPSS</li>
-            <br>
-            <li>Languages : Spanish (native)English (proficency),Italian (Advanced),French(Basic)</li>
-            <br>
-            <li>Driving License : B1</li>
-            <br>
-          </ul>
-          <br>
-        </div>
-      </section>
-
-      <section>
-        <div class="sectionContent">
-          <h1 id="VolunteerWork"><strong>Volunteer Work</strong></h1>
-          <table class= "table table-bordered">
-            <thead class = "thead-default">
-              <br>
-              <tr>
-                <th>Institution</th>
-                <th>Job function </th>
-                <th>Location</th>
-                <th>Date</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <tr>
-                <td>Hub Cymru Africa, Wales Centre for International Affairs(WCIA)</td>
-                <td>Assistant Proyect Officer</td>
-                <td>Cardiff</td>
-                <td>2015-2016</td>
-              </tr>
-              <tr>
-                <td>Women making Difference</td>
-                <td>Proyect Volunteer</td>
-                <td>Cardiff</td>
-                <td>2014-2015</td>
-              </tr>
-              <tr>
-                <td>Afnist festival</td>
-                <td>Social Media Team</td>
-                <td>Denmark</td>
-                <td>2015</td>
-              </tr>
-              <tr>
-                <td> South East Wales Biodiversity Records Centre (SEWBReC) </td>
-                <td>Data Technician </td>
-                <td>Cardiff</td>
-                <td>2013</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </section>
-      <br>
-      <div class="clear"></div>
       <div class="sectionContent">
-        <h2 id="Social Media"><strong>Social Media</strong> </h2>
-        <ul>
-          <a href="www.twitter.com/magadiff"> <img style="border:0;width:40px;height:40px" src="icono.png" alt="Twitter Icon"/></a>
-            <a href="www.linkedin.com/in/mariaballesrin"> <img style="border:0;width:40px;height:40px" src="icon.png" alt="Linkedin Icon"/>
-            </a>
-        </ul>
-        </div>
+        <h1 id="Education"><strong>Education</strong></h1>
+        <table class= "table table-bordered">
+          <thead class = "thead-default">
 
-        <div id="Contact">
-            <h2 id="contact"><strong>Contact</strong></h2>
-            <hr>
-            <br>
-            <form id="email" method="GET">
-              <label for="to">To:</label>
-              <input id="to" type="email" required>
-              <label for="topic">Topic: </label>
-              <select id="topic">
-                <option>-- Choose a topic --</option>
-                <option>Query</option>
-                <option>Proporsal</option>
-                <option>Other</option>
-              </select>
-              <label for="subject">Subject: </label>
-              <input id="subject" type="text" required>
-              <label for="body">Body:</label>
-              <textarea id="body" required></textarea>
-              <button type="submit" class="pure-button pure-button-primary">Send</button>
-          </form>
-        </div>
+            <tr>
+              <th>Qualification </th>
+              <th>Institution</th>
+              <th>Location</th>
+              <th>Date</th>
 
-        <p>
-          <a href="https://validator.w3.org/check?uri=http%3A%2F%2Fhhkaos.github.io&amp;charset=%28detect+automatically%29&amp;doctype=Inline&amp;group=0" target="_blank">
-            <img style="border:0;width:88px;height:31px" src="images/valhtml.png" alt="Valid HTML!">
-          </a>
+            </tr>
+          </thead>
+          <tbody>
 
-          <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fhhkaos.github.io&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=en" target="_blank">
-            <img style="border:0;width:88px;height:31px" src="images/valcss.png" alt="Valid CSS!">
-          </a>
-        </p>
+            <tr>
+              <td>MSc Geographical Information Systems </td>
+              <td>Esri España</td>
+              <td>Madrid</td>
+              <td>2016-2017</td>
+            </tr>
+
+            <tr>
+              <td>MSc Environmental Conservation and Management </td>
+              <td>Swansea Metropolitan University</td>
+              <td>Swansea</td>
+              <td>2011-2012</td>
+
+            </tr>
+            <tr>
+              <td>MSc Hidrology and Water Resources Management</td>
+              <td>Universidad de Álcala de Henares</td>
+              <td>Madrid</td>
+              <td>2009-2010 </td>
+
+            </tr>
+            <tr>
+              <td>BSc(Hons) Marine Sciences</td>
+              <td> Universidad de Cádiz </td>
+              <td>Cádiz</td>
+              <td>2006-2009 </td>
+
+            </tr>
+          </tbody>
+        </table>
+        <br>
       </div>
-    </body>
-    </html>
+    </section>
+
+    <section>
+
+      <div class="sectionContent">
+        <h1 id="WorkExperience"> <strong>Work Experience</strong> </h1>
+        <table class="table table-bordered" >
+          <thead class="thead-default">
+
+            <tr>
+              <th>Company </th>
+              <th>Job position </th>
+              <th>Location </th>
+              <th>Date</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Cardiff University</td>
+              <td>Campus Services</td>
+              <td>Cardiff</td>
+              <td>2014-2016</td>
+            </tr>
+
+            <tr>
+              <td>Imares-WurWageningen </td>
+              <td>Trainee position </td>
+              <td>Yerseke,The Netherlands</td>
+              <td>2012</td>
+
+            </tr>
+            <tr>
+              <td> Geotema S.r.L </td>
+              <td>Erasmus workplacement</td>
+              <td>Ferrara,Italy </td>
+              <td>2009</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <section>
+      <div class="sectionContent">
+        <h1 id="Skills"><strong>Skills</strong></h1>
+
+
+        <ul class="keySkills">
+          <li>Team work</li>
+          <br>
+          <li>Initiative</li>
+          <br>
+          <li>Communication</li>
+          <br>
+          <li>Organisational Skills</li>
+          <br>
+          <li>Analytical</li>
+          <br>
+          <li>Computing:Windows,Microsoft Office, ArcGis,MapInfo,SPSS</li>
+          <br>
+          <li>Languages : Spanish (native)English (proficency),Italian (Advanced),French(Basic)</li>
+          <br>
+          <li>Driving License : B1</li>
+          <br>
+        </ul>
+        <br>
+      </div>
+    </section>
+
+    <section>
+      <div class="sectionContent">
+        <h1 id="VolunteerWork"><strong>Volunteer Work</strong></h1>
+        <table class= "table table-bordered">
+          <thead class = "thead-default">
+
+            <tr>
+              <th>Institution</th>
+              <th>Job function </th>
+              <th>Location</th>
+              <th>Date</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Hub Cymru Africa, Wales Centre for International Affairs(WCIA)</td>
+              <td>Assistant Proyect Officer</td>
+              <td>Cardiff</td>
+              <td>2015-2016</td>
+            </tr>
+            <tr>
+              <td>Women making Difference</td>
+              <td>Proyect Volunteer</td>
+              <td>Cardiff</td>
+              <td>2014-2015</td>
+            </tr>
+            <tr>
+              <td>Afnist festival</td>
+              <td>Social Media Team</td>
+              <td>Denmark</td>
+              <td>2015</td>
+            </tr>
+            <tr>
+              <td> South East Wales Biodiversity Records Centre (SEWBReC) </td>
+              <td>Data Technician </td>
+              <td>Cardiff</td>
+              <td>2013</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+    <br>
+    <div class="clear"></div>
+    <div class="sectionContent">
+      <h2 id="SocialMedia"><strong>Social Media</strong> </h2>
+      <ul>
+        <a href="http://www.twitter.com/magadiff"> <img style="border:0;width:40px;height:40px" src="icono.png" alt="Twitter Icon"/></a>
+        <a href="http://www.linkedin.com/in/mariaballesrin"> <img style="border:0;width:40px;height:40px" src="icon.png" alt="Linkedin Icon"/>
+        </a>
+      </ul>
+    </div>
+
+    <div id="Contact">
+      <h2 id="contact"><strong>Contact</strong></h2>
+      <hr>
+      <br>
+      <form id="email" method="GET">
+        <label for="to">To:</label>
+        <input id="to" type="email" required>
+        <label for="topic">Topic: </label>
+        <select id="topic">
+          <option>-- Choose a topic --</option>
+          <option>Query</option>
+          <option>Proporsal</option>
+          <option>Other</option>
+        </select>
+        <label for="subject">Subject: </label>
+        <input id="subject" type="text" required>
+        <label for="body">Body:</label>
+        <textarea id="body" required></textarea>
+        <button type="submit" class="pure-button pure-button-primary">Send</button>
+      </form>
+    </div>
+
+    <p>
+      <a href="https://validator.w3.org/check?uri=http%3A%2F%2Fhhkaos.github.io&amp;charset=%28detect+automatically%29&amp;doctype=Inline&amp;group=0" target="_blank">
+        <img style="border:0;width:88px;height:31px" src="images/valhtml.png" alt="Valid HTML!">
+      </a>
+
+      <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Fhhkaos.github.io&amp;profile=css3&amp;usermedium=all&amp;warning=1&amp;vextwarning=&amp;lang=en" target="_blank">
+        <img style="border:0;width:88px;height:31px" src="images/valcss.png" alt="Valid CSS!">
+      </a>
+    </p>
+  </div>
+</body>
+</html>
